# tap-rilla

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
tap_rilla/: __init__.py  client.py  streams.py  tap.py
tests/integration/: test_tap_rilla.py
