[build-system]
requires = [
    "hatchling>=1.29.0,<2",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "tap-rilla"
dynamic = [ "version" ]
description = "Singer tap for Rilla Voice API, built with the Meltano SDK for Singer Taps"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["meltano", "singer", "tap", "rilla"]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Taylor A. Murphy", email = "taylor@arch.dev"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'backports-datetime-fromisoformat>=2.0.1; python_version<"3.11"',
    'backports-httpmethod>=0.2.1; python_version<"3.11"',
    "singer-sdk~=0.53.7",
    "requests~=2.34.0",
    "typing-extensions>=4.14.1 ; python_full_version < '3.12'",
]

[project.scripts]
tap-rilla = "tap_rilla.tap:TapRilla.cli"

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
testing = [
    "pytest>=9.0.3",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.20.1",
    "ty>=0.0.31",
    "types-requests>=2.33.0.20260408",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
local_partial_types = true
strict = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "backports.datetime_fromisoformat.*",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle (error)
    "W",    # pycodestyle (warning)
    "C90",  # mccabe
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle/flake8-docstrings
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PLC",  # pylint (convention)
    "PLE",  # pylint (error)
    "PLR",  # pylint (refactor)
    "PLW",  # pylint (warning)
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "RUF",  # ruff
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "INP",      # Allow implicit namespace packages in tests
    "S101",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "google"
